--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,19 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: 'temurin'
           java-version: '17'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./app/gradlew
+
       - name: Build with Gradle
-        run: |
-          cd app
-          ./gradlew assembleDebug
+        run: ./app/gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v3
