--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,14 +19,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./app/gradlew
+      - name: Grant execute permission
+        run: chmod +x ./gradlew || true
 
       - name: Build with Gradle
-        run: ./app/gradlew assembleDebug
+        run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: GFNBooster
           path: app/build/outputs/apk/debug/*.apk
